# AI-DESK

./: .gitignore  BOARD.md  docker-compose.yml  start.sh  stop.sh
backend-py/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend-py/alembic/: env.py
backend-py/alembic/versions/: 0001_alter_message_content_to_text.py  0002_create_message_attachment.py  0003_create_ai_task.py  0004_create_client_event.py
backend-py/app/: main.py
backend-py/app/agents/: models.py  repository.py  router.py  schemas.py  service.py  watcher.py
backend-py/app/auth/: cookies.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend-py/app/colleagues/: router.py  schemas.py  service.py
backend-py/app/common/: response.py
backend-py/app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
backend-py/app/desktop/: router.py  schemas.py  service.py
backend-py/app/helper/: lan_ip_store.py  router.py  service.py
backend-py/app/logs/: models.py  router.py  schemas.py  service.py
backend-py/helper-pkg/: README.md
backend-py/tests/: conftest.py
desktop-agent/: .gitignore  pyproject.toml  win_helper.py
desktop-agent/build-pkg/: README.md  aidesk-helper.spec  build-dev.sh  build.sh  distribution.xml  entry.py
desktop-agent/build-pkg-win/: build.ps1  install.ps1  installer.py  win-helper.spec  win-installer.spec
desktop-agent/scripts/: aidesk-action-hook.cjs  aidesk-compact-hook.cjs  aidesk-prompt-hook.cjs  install-launchagent.sh
desktop-agent/templates/: com.aidesk.agent.plist
(+340 files in other folders)
