[project]
name = "aidesk-agent"
version = "0.1.0"
description = "AI Desk Desktop Agent — Mac 로컬 정보를 수집해 중앙 백엔드로 보고하고, 브라우저 대시보드의 로컬 OS 조작 요청을 처리하는 헬퍼"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[project.scripts]
aidesk-agent = "aidesk_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aidesk_agent"]
